Do not render objects crossing the IDL twice.

Based on a patch by artembogdanov, thanks!
BUG: 314540